--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Aboutme.html">About Me</a></li>
-							<li><a href="Projects.html">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="index.html#form">Contact</a></li>
 						</ul>
 					
